solved animation overflow on small screens

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,8 +1,11 @@
-// Specific CSS for your home-page
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
+}
+
+html {
+  overflow: auto;
 }
 
 a {
